--- a/templates/user/user_wrapper.html
+++ b/templates/user/user_wrapper.html
@@ -23,13 +23,13 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="anchor nav-link" href="/user/scores?skip=0&take=25"
+        <a class="anchor nav-link" href="/user/attempted-quizzes?skip=0&take=25"
           >My Scores</a
         >
       </li>
       <li class="nav-item">
-        <a class="anchor nav-link" href="/user/quizzes?skip=0&take=25"
-          >Upcoming Quizzes</a
+        <a class="anchor nav-link" href="/user/subjects?skip=0&take=25"
+          >Subjects</a
         >
       </li>
       <li class="nav-item">
