--- a/static/css/style.css
+++ b/static/css/style.css
@@ -108,16 +108,6 @@
   transform: translateX(20px);
 }
 
-@media screen and (max-width: 768px) {
-  #title {
-    display: none;
-  }
-
-  #smallTitle {
-    display: block;
-  }
-}
-
 .guage-chart-container {
   position: relative;
   width: 150px;
@@ -141,4 +131,30 @@
   width: 8px;
   top: 0;
   right: 0;
+}
+
+.chart-groups {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+}
+
+.chart-container {
+  width: 50vw;
+  max-width: 600px;
+}
+
+@media screen and (max-width: 768px) {
+  .chart-container {
+    width: 100%;
+  }
+
+  #title {
+    display: none;
+  }
+
+  #smallTitle {
+    display: block;
+  }
 }
