--- a/templates/user/user_chapter.html
+++ b/templates/user/user_chapter.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %} {% block title %}Score Page{% endblock %} {% block
+{% extends "base.html" %} {% block title %}Chapter Page{% endblock %} {% block
 content %} {% include "user/user_wrapper.html" %}
 <section class="min-vh-100 p-4">
   <nav aria-label="breadcrumb">
