--- a/static/css/style.css
+++ b/static/css/style.css
@@ -142,7 +142,16 @@
 
 .chart-container {
   width: 50vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   max-width: 600px;
+}
+
+.summary-box {
+  width: 100%;
+  margin: 0 auto !important;
 }
 
 @media screen and (max-width: 768px) {
