--- a/templates/admin/admin_wrapper.html
+++ b/templates/admin/admin_wrapper.html
@@ -23,11 +23,15 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
+        <a class="anchor nav-link" href="/admin/users?skip=0&take=25"
+          >Top Scorrer</a
+        >
+      </li>
+      <li class="nav-item">
         <a class="anchor nav-link" href="/admin/subject?skip=0&take=25"
           >My Subjects</a
         >
       </li>
-
       <li class="nav-item">
         <a class="anchor nav-link" href="/auth/logout">Logout</a>
       </li>
