--- a/templates/user/attempted_quiz.html
+++ b/templates/user/attempted_quiz.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %} {% block title %}Score Page{% endblock %} {% block
+{% extends "base.html" %} {% block title %}Quiz List{% endblock %} {% block
 content %} {% include "user/user_wrapper.html" %}
 <section class="p-3">
   <nav aria-label="breadcrumb">
